--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cli-file-creator",
+  "name": "folios-csv",
   "version": "1.0.0",
-  "description": "Proyecto CLI para generar ficheros de manera facil",
+  "description": "Proyecto CLI para generar folios a través de la consola",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,5 +25,6 @@
     "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
     "shelljs": "^0.8.4"
-  }
+  },
+  "bin": "./index.js"
 }
